<resources>
    <string name="app_name">Amegu</string>
    <string name="title_activity_login">Aktivitas Masuk</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Kata Sandi</string>
    <string name="action_sign_in">Masuk</string>
    <string name="action_sign_in_short">Masuk</string>
    <string name="welcome">"Selamat Datang!"</string>
    <string name="invalid_username">Nama pengguna tidak ada</string>
    <string name="invalid_password">Kata sandi harus tersusun lebih dari 8 karakter</string>
    <string name="login_failed">"Gagal masuk"</string>
    <string name="title_activity_register">Aktivitas Pendaftaran</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. At blanditiis corporis, culpa dicta doloremque doloribus est fugit, illum inventore ipsa iste laboriosam minus modi nemo odio perspiciatis, quos suscipit vero.
    </string>
    <string name="home">Beranda</string>
    <string name="upload">Unggah</string>
    <string name="terakhir_dicari">Terakhir dicari</string>
    <string name="riwayat_pencarian_kosong">Riwayat pencarian kosong</string>
    <string name="search">Cari hewan …</string>
    <string name="hasil_pencarian">Hasil pencarian dari</string>
    <string name="hapus_riwayat">Hapus Riwayat</string>
    <string name="apakah_anda_yakin_untuk_menghapus_semua_riwayat_pencarian">Apakah Anda yakin untuk menghapus semua riwayat pencarian?</string>
    <string name="history_icon">Lambang Pencarian</string>
    <string name="anjing_super_langka_bulldog_limited_edition">Anjing Super Langka Bulldog Limited Edition</string>
    <string name="informasi_pemilik">Informasi Pemilik</string>
    <string name="bambang_sulaiman">Bambang Sulaiman</string>
    <string name="jakarta_pusat">Jakarta Pusat</string>
    <string name="informasi_hewan">Informasi Hewan</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="jenis">Jenis</string>
    <string name="bulldog">Bulldog</string>
    <string name="usia">Usia</string>
    <string name="_3_tahun">3 tahun</string>
    <string name="kondisi">Kondisi</string>
    <string name="sehat">Sehat</string>
    <string name="berat">Berat</string>
    <string name="_5_kg">5 kg</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="anjing_ini_adalah_anjing_dari_jenis_bulldog_dengan_nama_toni_yang_sangat_periang_anjing_ini_gemar_mengikuti_pemiliknya_mengitari_halaman_rumah_ia_senang_diajak_main_dan_diajak_berenang_saran_perawatan_tidak_perlu_sering_sering_memandikannya_karena_anjing_ini_gemar_mandi_sendiri">Anjing ini adalah anjing dari jenis Bulldog dengan nama Toni yang sangat periang. Anjing ini gemar mengikuti pemiliknya mengitari halaman rumah, ia senang diajak main dan diajak berenang. Saran perawatan: tidak perlu sering-sering memandikannya karena anjing ini gemar mandi sendiri.</string>
    <string name="adopsi_sekarang">Adopsi Sekarang</string>
    <string name="button">Tombol</string>
    <string name="rp_10_000_000">Rp. 10,000,000</string>
    <string name="invalid_login">Nama pengguna atau kata sandi salah.</string>
    <string name="prompt_first_name">Nama Depan</string>
    <string name="prompt_last_name">Nama Belakang</string>
    <string name="action_register">Daftar</string>
    <string name="action_getting_started">Memulai</string>
    <string name="action_login">Sudah punya akun</string>
    <string name="invalid_first_name">Masukkan nama depan</string>
    <string name="invalid_last_name">Masukkan nama belakang</string>
    <string name="logout">Keluar</string>
    <string name="loading">Harap tunggu…</string>
    <string name="action_send">Kirim</string>
    <string name="alamat">Alamat</string>
    <string name="Provinsi">Provinsi</string>
    <string name="kota">Kota</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="kelurahan">Kelurahan</string>
    <string name="upload_gambar">Unggah Gambar</string>
    <string name="upload_text">Unggah foto sebelum mengirimkan data</string>
    <string name="upload_title">Yuk isi informasi hewanmu</string>
    <string name="foto_product">Foto Hewan</string>
    <string name="mulai">Mulai</string>
    <string name="nama_hewan">Nama Hewan</string>
    <string name="berat_badan">Berat Badan</string>
    <string name="betina">Betina</string>
    <string name="jantan">Jantan</string>
    <string name="harga">Harga</string>
    <string name="ras">Ras</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="account">Akun</string>
    <string name="address">Alamat</string>
    <string name="adoption">Adopsi</string>
    <string name="pets">Hewan</string>
    <string name="favorite">Hewan Favorite</string>
    <string name="tidak_ada_hewan_yang_tersedia">Tidak ada hewan yang tersedia</string>
    <string name="hewan_saya">Hewan Saya</string>
    <string name="simpan">Simpan</string>
    <string name="edit_hewan">Edit Hewan</string>
    <string name="hapus_hewan">Hapus hewan</string>
    <string name="ubah">Ubah</string>
    <string name="update_pet_title">Ubah informasi hewanmu</string>
    <string name="bank_account">Rekening</string>
    <string name="payment">Payment</string>
    <string name="check_connection">Mohon untuk memeriksa koneksi internet</string>
</resources>