<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pet.update.PetUpdateFragment">
    <include layout="@layout/layout_toolbar" />
    <androidx.core.widget.NestedScrollView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="64dp"
        android:paddingBottom="64dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_pet_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/foto_product"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/upload"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ubah"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:gravity="right"
                    android:textStyle="bold"
                    android:textAlignment="gravity"
                    android:textColor="@color/Oren"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginEnd="20dp"
                    android:visibility="gone" />
                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:visibility="gone"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/upload_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/upload_text"
                        android:textAlignment="center" />
                </LinearLayout>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/nama_hewan"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/nama_hewan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama_hewan"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/usia"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/usia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usia"
                android:inputType="number"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/jenis"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textStyle="bold"/>
            <Spinner
                android:id="@+id/jenis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/ras"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textStyle="bold"/>
            <Spinner
                android:id="@+id/ras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/berat_badan"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/berat_badan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/berat_badan"
                android:inputType="number"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/kondisi"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/kondisi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kondisi"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/jenis_kelamin"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textStyle="bold"/>
            <RadioGroup
                android:id="@+id/jenis_kelamin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/radio_jantan"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/jantan"
                    android:layout_weight="1"/>
                <RadioButton
                    android:id="@+id/radio_betina"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/betina"
                    android:layout_weight="1"/>
            </RadioGroup>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/harga"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/harga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/harga"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/deskripsi"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/deskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/deskripsi"/>
            <Button
                android:id="@+id/send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_send"/>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</FrameLayout>
